#24 construct check object from hive context w/ table and database name